--- a/insta.css
+++ b/insta.css
@@ -2,7 +2,7 @@
 #main-container {
   text-align: center;
   width: 100vmin;
-  height: 215vmin;
+  height: 210vmin;
   background-color: rgb(255, 255, 255, 1);
   position: relative;
   border-style: solid;
@@ -12,10 +12,13 @@
 }
 
 #header{
+  z-index: 1;
+  top: 0;
+  margin-bottom: 0px;
   width: 100vmin;
   height: 12vmin;
   background-color: rgba(255, 255, 255, 1);
-  position: relative;
+  position: fixed;
   display: flex;
   justify-content:space-between;
   align-items: center;
@@ -42,6 +45,7 @@
 }
 
 .top_imgs {
+  margin-top: 12vmin;
   width: 100vmin;
   height: 25vmin;
   background-color: #f0f0f5;
@@ -151,6 +155,7 @@
 #comment {
   text-align: start;
   margin-left: 3vmin;
+  overflow: auto;
 }
 
 #horizen_align > img {
@@ -180,19 +185,30 @@
   margin-top: 5vh;
   font-size: 1.7em;
   color: gray;
-  margin-bottom: 1.2vh;
+  /*margin-bottom: 1.2vh;*/
+}
+
+
+#footer-wrapper {
+  position: fixed;
+  right: 0;
+  left: 0;
+  bottom: 0;
+    width: 100vmin;
+  margin: 0 auto;
 }
 
 #footer {
+  z-index: 4;
   width: 100vmin;
-  height: 14vmin;
+  height: 12vmin;
   background-color: rgba(255, 255, 255, 1);
-  position: relative;
   display: flex;
   justify-content: space-around;
   align-items: center;
   border-top: 1mm solid lightgray;
   border-bottom: 1mm solid lightgray;
+
 }
 
 #footer > img {
